<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A63333"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_theme"
        tools:context=".ui.login.LoginFragment">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_theme2">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin">

                    <TextView
                        android:id="@+id/editText_haveaccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/dont_have_account" />

                    <TextView
                        android:id="@+id/textViewCreateAcc"
                        android:layout_width="71dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/register"
                        android:textColor="@color/edit_text_forgotpass"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/editText_forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/forgot_password_text"
                    android:textColor="@color/edit_text_forgotpass"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

                <EditText
                    android:id="@+id/editTextMail"
                    android:layout_width="384dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="43dp"
                    android:layout_marginBottom="17dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/mail_icon"
                    android:drawablePadding="8sp"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="text"
                    android:paddingLeft="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="384dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="17dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/lock_icon"
                    android:drawablePadding="8sp"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="numberPassword"
                    android:paddingLeft="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextMail" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="15dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="14dp"
                    android:backgroundTint="@color/dark_purple"
                    android:text="@string/Login"
                    app:cornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@id/linearLayout"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_forgotPassword" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".35" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="196dp"
            android:layout_height="95dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/welcome_message"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>