<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_theme">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="549dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextMail"
                    android:layout_width="371dp"
                    android:layout_height="61dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/mail_icon"
                    android:drawablePadding="8sp"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="text"
                    android:paddingLeft="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="371dp"
                    android:layout_height="61dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/lock_icon"
                    android:drawablePadding="8sp"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="text"
                    android:paddingLeft="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextMail" />

                <EditText
                    android:id="@+id/editTextComfirmPassword"
                    android:layout_width="371dp"
                    android:layout_height="61dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/lock_icon"
                    android:drawablePadding="8sp"
                    android:ems="10"
                    android:hint="@string/comfirm_password_hint"
                    android:inputType="text"
                    android:paddingLeft="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="371dp"
                    android:layout_height="61dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/username_icon"
                    android:drawablePadding="8sp"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="text"
                    android:paddingLeft="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnSignin"
                    android:layout_width="365dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/login_background"
                    android:text="@string/register_message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextComfirmPassword" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="92dp"
                    android:text="@string/have_account"
                    android:textColor="@color/edit_text_forgotpass"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".35" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="193dp"
            android:layout_height="60dp"
            android:layout_marginTop="96dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register_message"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>