<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:padding="5dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerViewID"
            android:layout_width="396dp"
            android:layout_height="614dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nearProducts" />

        <EditText
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_bar_background"
            android:hint="@string/search_bar_hint"
            android:paddingLeft="50dp"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_bar_hint" />


        <TextView
            android:id="@+id/allProducts"
            android:layout_width="60dp"
            android:layout_height="23dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_bar_background"
            android:text="@string/all"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <TextView
            android:id="@+id/nearProducts"
            android:layout_width="120dp"
            android:layout_height="23dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="210dp"
            android:background="@drawable/search_bar_background"
            android:text="@string/near"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/allProducts"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <ImageView
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>